@@ -26,6 +26,11 @@ import org.opensearch.action.admin.cluster.node.info.NodeInfo;
 import org.opensearch.action.admin.cluster.node.info.NodesInfoRequest;
 import org.opensearch.action.admin.cluster.node.info.NodesInfoResponse;
 import org.opensearch.action.admin.cluster.node.info.PluginsAndModules;
+import org.opensearch.action.admin.indices.exists.indices.IndicesExistsRequest;
+import org.opensearch.action.admin.indices.exists.indices.IndicesExistsResponse;
+import org.opensearch.action.admin.indices.get.GetIndexRequest;
+import org.opensearch.action.admin.indices.get.GetIndexResponse;
+import org.opensearch.action.support.IndicesOptions;
 import org.opensearch.client.Request;
 import org.opensearch.client.Response;
 import org.opensearch.cluster.health.ClusterHealthStatus;
@@ -39,19 +44,26 @@ import java.nio.charset.StandardCharsets;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
+import java.util.concurrent.TimeUnit;
 import java.util.function.Function;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import static org.hamcrest.Matchers.containsString;
 
-@ThreadLeakScope(ThreadLeakScope.Scope.NONE)
+@ThreadLeakScope(ThreadLeakScope.Scope.SUITE)
 @OpenSearchIntegTestCase.ClusterScope(scope = OpenSearchIntegTestCase.Scope.SUITE)
 public class SetupPluginIT extends OpenSearchIntegTestCase {
 
+    private static final Logger log = LogManager.getLogger(SetupPluginIT.class);
+    public static final String TEST_INDEX = "test-index-0000";
+    public static final String TEST_ALIAS = "test-alias";
+    public static final String TEST_TEMPLATE = "test-template";
+    public static final String ISM_INDEX = ".opendistro-ism-config";
+
     @Override
     protected Collection<Class<? extends Plugin>> nodePlugins() {
-        return Collections.singletonList(SetupPlugin.class);
+        return List.of(SetupPlugin.class);
     }
 
     public void testPluginInstalled() throws IOException, ParseException {
@@ -81,5 +93,33 @@ public class SetupPluginIT extends OpenSearchIntegTestCase {
         Assert.assertTrue(
                 pluginInfos.stream()
                         .anyMatch(pluginInfo -> pluginInfo.getName().equals("wazuh-indexer-setup")));
+    }
+
+    public void testISMPluginInstalled() {
+        ClusterHealthRequest request = new ClusterHealthRequest();
+        ClusterHealthResponse response =
+                OpenSearchIntegTestCase.client().admin().cluster().health(request).actionGet();
+        Assert.assertEquals(ClusterHealthStatus.GREEN, response.getStatus());
+
+        NodesInfoRequest nodesInfoRequest = new NodesInfoRequest();
+        nodesInfoRequest.addMetric(NodesInfoRequest.Metric.PLUGINS.metricName());
+        NodesInfoResponse nodesInfoResponse =
+                OpenSearchIntegTestCase.client().admin().cluster().nodesInfo(nodesInfoRequest).actionGet();
+        List<PluginInfo> pluginInfos =
+                nodesInfoResponse.getNodes().stream()
+                        .flatMap(
+                                (Function<NodeInfo, Stream<PluginInfo>>)
+                                        nodeInfo -> nodeInfo.getInfo(PluginsAndModules.class).getPluginInfos().stream())
+                        .collect(Collectors.toList());
+        Assert.assertTrue(
+                pluginInfos.stream()
+                        .anyMatch(pluginInfo -> pluginInfo.getName().equals("opensearch-index-management")));
+    }
+
+    /** Test that the ISM index was created */
+    @Test
+    public void testISMIndexCreated() throws Exception {
+        ensureGreen();
+        assertBusy(() -> assertTrue(indexExists("test")));
     }
 }
